Change terminology to be in line with the paper

--- a/configproblem/qaoa/qaoa_instance_evaluation.ipynb
+++ b/configproblem/qaoa/qaoa_instance_evaluation.ipynb
@@ -171,8 +171,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false,
-    "is_executing": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -198,13 +197,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false,
-    "is_executing": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "# plot PUBO results\n",
-    "result_quality_list = []\n",
+    "validity_quality_list = []\n",
     "if run_puso_qaoa:\n",
     "    for index, instance in enumerate(problem_instances):\n",
     "        file_path_pubo = \"results\\\\instance_\" + str(index) + \"_pubo_histogram\" + \".png\" if save_results else None\n",
@@ -218,7 +216,7 @@
     "\n",
     "        probabilities_dict = instance.convert_solution_dict(probabilities_dict, 'puso_combined')\n",
     "\n",
-    "        result_quality_list.append(instance.get_result_quality(probabilities_dict))\n",
+    "        validity_quality_list.append(instance.get_validity_quality(probabilities_dict))\n",
     "\n",
     "        for key in probabilities_dict:\n",
     "            probabilities_dict[key] = round(probabilities_dict[key], 4)\n",
@@ -229,35 +227,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "is_executing": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# rank instances by validity_quality = success_probability * 2^num_features / num_valid_configs\n",
     "if run_puso_qaoa:\n",
     "    # sort instances by validity_quality\n",
-    "    sorted_indices = np.argsort(result_quality_list)\n",
+    "    sorted_indices = np.argsort(validity_quality_list)\n",
     "    sorted_indices = sorted_indices[::-1]\n",
     "    sorted_problem_instances = [problem_instances[i] for i in sorted_indices]\n",
-    "    success_probabilities_per_valid_config_list = [result_quality_list[i] for i in sorted_indices]\n",
+    "    success_probabilities_per_valid_config_list = [validity_quality_list[i] for i in sorted_indices]\n",
     "    for index, instance in enumerate(sorted_problem_instances):\n",
     "        print(f\"Instance {sorted_indices[index]}:\")\n",
     "        print(str(instance))\n",
-    "        print(f\"Result quality: {result_quality_list[sorted_indices[index]]}\\n\")"
+    "        print(f\"Result quality: {validity_quality_list[sorted_indices[index]]}\\n\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false,
-    "is_executing": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "# plot quadratized QUBO results\n",
-    "result_quality_list = []\n",
+    "validity_quality_list = []\n",
     "if run_quso_qaoa:\n",
     "    for index, instance in enumerate(problem_instances):\n",
     "        file_path_qubo = \"results\\\\instance_\" + str(index) + \"_qubo_histogram\" + \".png\" if save_results else None\n",
@@ -273,7 +268,7 @@
     "\n",
     "        probabilities_dict = instance.convert_solution_dict(probabilities_dict, 'quso_combined')\n",
     "\n",
-    "        result_quality_list.append(instance.get_result_quality(probabilities_dict))\n",
+    "        validity_quality_list.append(instance.get_validity_quality(probabilities_dict))\n",
     "\n",
     "        for key in probabilities_dict:\n",
     "            probabilities_dict[key] = round(probabilities_dict[key], 4)\n",
@@ -284,22 +279,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "is_executing": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# rank instances by validity_quality = success_probability * 2^num_features / num_valid_configs\n",
     "if run_quso_qaoa:\n",
     "    # sort instances by validity_quality\n",
-    "    sorted_indices = np.argsort(result_quality_list)\n",
+    "    sorted_indices = np.argsort(validity_quality_list)\n",
     "    sorted_indices = sorted_indices[::-1]\n",
     "    sorted_problem_instances = [problem_instances[i] for i in sorted_indices]\n",
-    "    success_probabilities_per_valid_config_list = [result_quality_list[i] for i in sorted_indices]\n",
+    "    success_probabilities_per_valid_config_list = [validity_quality_list[i] for i in sorted_indices]\n",
     "    for index, instance in enumerate(sorted_problem_instances):\n",
     "        print(f\"Instance {sorted_indices[index]}:\")\n",
     "        print(str(instance))\n",
-    "        print(f\"Result quality: {result_quality_list[sorted_indices[index]]}\\n\")"
+    "        print(f\"Result quality: {validity_quality_list[sorted_indices[index]]}\\n\")"
    ]
   }
  ],
