--- a/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
@@ -10,7 +10,7 @@
     "With the methods described in the qaoa_mincost_sat notebook, we are only able to solve 2-SAT problems, because we transform our SAT problem to a QUBO problem, which is limited to quadratic terms, and then implement the corresponding Ising model in a quantum circuit.\n",
     "There are also methods for quadratization of Polynomial Unconstrained Binary Optimization (PUBO) problems, meaning a transformation to a QUBO problem, but they introduce auxiliary variables and thus require additional qubits. Nevertheless, we will also have a look at this method in this notebook.\n",
     "\n",
-    "The following describes, how to convert an arbitrary SAT problem to a PUBO problem and how to implement the corresponding problem circuit for applying QAOA, while using the same number of qubits as there are boolean variables in the SAT term and using a circuit depth that grows linear in the number of variables and degree of the SAT problem.\n",
+    "The following describes, how to convert an arbitrary SAT problem to a PUBO problem and how to implement the corresponding problem circuit for applying QAOA, while using the same number of qubits as there are boolean variables in the SAT term.\n",
     "\n",
     "The system, we will use as an example in this notebook, is described by the following boolean formular:\n",
     "$\n",
@@ -44,21 +44,21 @@
     "Using this method we can transform our example into the corresponding PUBO model.\n",
     "\n",
     "$$\n",
-    "min~y(x) = (1 - x_1)(1 - x_2) + (1 - x_2)(x_3)(1 - x_4) + (1 - x_3)(x_5)(x_6)\\\\\n",
+    "y(\\vec x) = (1 - x_1)(1 - x_2) + (1 - x_2)(x_3)(1 - x_4) + (1 - x_3)(x_5)(x_6)\\\\\n",
     "= 1 - x_1 - x_2 + x_3 + x_1 x_2 - x_2 x_3 - x_3 x_4 + x_5 x_6 + x_2 x_3 x_4 - x_3 x_5 x_6\n",
     "$$\n",
     "\n",
     "We can now transform this PUBO model into an Ising model\n",
     "\n",
     "$$\n",
-    "min~y(x) = 1 - \\frac{1 -s_1}{2} - \\frac{1 - s_2}{2} + \\frac{1 - s_3}{2} + \\frac{1 - s_1}{2} \\frac{1 - s_2}{2} - \\frac{1 - s_2}{2} \\frac{1 - s_3}{2} - \\frac{1 - s_3}{2} \\frac{1 - s_4}{2} + \\frac{1 - s_5}{2} \\frac{1 - s_6}{2} + \\frac{1 - s_2}{2} \\frac{1 - s_3}{2} \\frac{1 - s_4}{2} - \\frac{1 - s_3}{2} \\frac{1 - s_5}{2} \\frac{1 - s_6}{2}\\\\\n",
-    "= \\frac{1}{2} - \\frac{1}{4} s_1 + \\frac{3}{8} s_2 + \\frac{1}{8} s_4 - \\frac{1}{8} s_5 - \\frac{1}{8} s_6 + \\frac{1}{4} s_1 s_2 - \\frac{1}{8} s_2 s_3 + \\frac{1}{8} s_2 s_4 - \\frac{1}{8} s_3 s_4 - \\frac{1}{8} s_3 s_5 - \\frac{1}{8} s_3 s_6 + \\frac{1}{8} s_5 s_6 - \\frac{1}{8} s_2 s_3 s_4 + \\frac{1}{8} s_3 s_5 s_6\\\\\n",
+    "y(\\vec z) = 1 - \\frac{1 -z_1}{2} - \\frac{1 - z_2}{2} + \\frac{1 - z_3}{2} + \\frac{1 - z_1}{2} \\frac{1 - z_2}{2} - \\frac{1 - z_2}{2} \\frac{1 - z_3}{2} - \\frac{1 - z_3}{2} \\frac{1 - z_4}{2} + \\frac{1 - z_5}{2} \\frac{1 - z_6}{2} + \\frac{1 - z_2}{2} \\frac{1 - z_3}{2} \\frac{1 - z_4}{2} - \\frac{1 - z_3}{2} \\frac{1 - z_5}{2} \\frac{1 - z_6}{2}\\\\\n",
+    "= \\frac{1}{2} - \\frac{1}{4} z_1 + \\frac{3}{8} z_2 + \\frac{1}{8} z_4 - \\frac{1}{8} z_5 - \\frac{1}{8} z_6 + \\frac{1}{4} z_1 z_2 - \\frac{1}{8} z_2 z_3 + \\frac{1}{8} z_2 z_4 - \\frac{1}{8} z_3 z_4 - \\frac{1}{8} z_3 z_5 - \\frac{1}{8} z_3 z_6 + \\frac{1}{8} z_5 z_6 - \\frac{1}{8} z_2 z_3 z_4 + \\frac{1}{8} z_3 z_5 z_6\\\\\n",
     "$$\n",
     "\n",
-    "Which leaves us with the following cost hamiltonian $H_C$:\n",
+    "Which leaves us with the following validity hamiltonian $H_v$:\n",
     "\n",
     "$$\n",
-    "H_C = \\frac{1}{2} - \\frac{1}{4} \\sigma_1^z + \\frac{3}{8} \\sigma_2^z + \\frac{1}{8} \\sigma_4^z - \\frac{1}{8} \\sigma_5^z - \\frac{1}{8} \\sigma_6^z + \\frac{1}{4} \\sigma_1^z \\sigma_2^z - \\frac{1}{8} \\sigma_2^z \\sigma_3^z + \\frac{1}{8} \\sigma_2^z \\sigma_4^z - \\frac{1}{8} \\sigma_3^z \\sigma_4^z - \\frac{1}{8} \\sigma_3^z \\sigma_5^z - \\frac{1}{8} \\sigma_3^z \\sigma_6^z + \\frac{1}{8} \\sigma_5^z \\sigma_6^z - \\frac{1}{8} \\sigma_2^z \\sigma_3^z \\sigma_4^z + \\frac{1}{8} \\sigma_3^z \\sigma_5^z \\sigma_6^z\\\\\n",
+    "H_v = \\frac{1}{2} - \\frac{1}{4} \\sigma_1^z + \\frac{3}{8} \\sigma_2^z + \\frac{1}{8} \\sigma_4^z - \\frac{1}{8} \\sigma_5^z - \\frac{1}{8} \\sigma_6^z + \\frac{1}{4} \\sigma_1^z \\sigma_2^z - \\frac{1}{8} \\sigma_2^z \\sigma_3^z + \\frac{1}{8} \\sigma_2^z \\sigma_4^z - \\frac{1}{8} \\sigma_3^z \\sigma_4^z - \\frac{1}{8} \\sigma_3^z \\sigma_5^z - \\frac{1}{8} \\sigma_3^z \\sigma_6^z + \\frac{1}{8} \\sigma_5^z \\sigma_6^z - \\frac{1}{8} \\sigma_2^z \\sigma_3^z \\sigma_4^z + \\frac{1}{8} \\sigma_3^z \\sigma_5^z \\sigma_6^z\\\\\n",
     "$$\n",
     "\n",
     "We can implement such a hamiltonian using the `qubovert` library."
@@ -93,9 +93,9 @@
    "metadata": {},
    "source": [
     "### Phase-separating operator\n",
-    "Like in the other notebook, the phase-separating operator $U(C,\\gamma)$ encodes $C$ and can be derived from a cost Hamiltonian $H_{Ctot}$ in Ising-form.\n",
-    "Unlike in the other notebook, there is now the possibility of having terms of degree higher than 2 in the cost function, for which we need to implement the corresponding $R_{z ... z}$ gates.\n",
-    "We do this by decomposing the $R_{z ... z}$ gate into multiple CNOT gates and a single $R_z$ gate as illustrated by [Glos et al](https://arxiv.org/pdf/2009.07309.pdf).\n"
+    "Like in the other notebook, the phase-separating operator $U_C$ encodes $C$ and can be derived from a cost Hamiltonian $H_{C}$ in Ising-form.\n",
+    "Unlike in the other notebook, there is now the possibility of having terms of degree higher than 2 in the cost function, for which we need to implement the corresponding multicontrolled $R_z$ gates.\n",
+    "We do this by decomposing the multicontrolled $R_z$ gate into multiple $CNOT$ gates and a single $R_z$ gate as illustrated by [Glos et al](https://arxiv.org/pdf/2009.07309.pdf).\n"
    ]
   },
   {
@@ -104,7 +104,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# R_{zzz} gate\n",
     "from qaoa_mincost_k_sat import k_rz_gate\n",
     "from qiskit import QuantumCircuit\n",
     "\n",
@@ -118,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using this implementation of general $R_{z ... z}$ gates, we can now implement the phase-separating operator for our example."
+    "Using this implementation of multicontrolled $R_z$ gates, we can now implement the phase-separating operator for our example."
    ]
   },
   {
@@ -234,7 +233,7 @@
     "from configproblem.util.hamiltonian_math import get_hamiltonian_dimension\n",
     "\n",
     "hamiltonian = combined_hamiltonian\n",
-    "layers = 60 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
+    "layers = 40 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
     "n_features = 6\n",
     "shots = 256\n",
     "theta = {\"beta\": 0.01, \"gamma\": -0.01} # start values for optimization\n",
@@ -341,7 +340,7 @@
     "\n",
     "If we have an arbitrary SAT instance, we can use QAOA to find the most likely configuration. We can then exclude the configuration we found from the SAT instance by adding the following clause:\n",
     "\n",
-    "$$x_i \\vee \\dots \\vee x_j \\vee \\neg x_k \\vee \\dots \\vee \\neg x_l$$\n",
+    "$$(x_i \\vee \\dots \\vee x_j \\vee \\neg x_k \\vee \\dots \\vee \\neg x_l)$$\n",
     "\n",
     "Where $x_i$ to $x_j$ are the variables that have the value $0$ for the found configuration and $x_k$ to $x_l$ are the variables that have the value $1$ for the found configuration.\n",
     "\n",
@@ -355,7 +354,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "from configproblem.qaoa.qaoa_mincost_k_sat import exclude_config\n",
