--- a/configproblem/qaoa/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_sat.ipynb
@@ -42,27 +42,27 @@
     "Approximates the solution of an combinatorial optimization problem consisting of:\n",
     "- $n$ binary variables\n",
     "- $m$ clauses\n",
-    "- objective function $C(z)$\n",
+    "- objective function $C(\\vec z)$\n",
     "\n",
-    "The domain of the problem is unconstrained, thus the algorithms goal is to find an (almost) optimal bistring $z=z_1...z_n$\n",
+    "The domain of the problem is unconstrained, thus the algorithms goal is to find an (almost) optimal bistring $\\vec z=z_1...z_n$\n",
     "\n",
     "It refines VQA and uses the Alternating Operator Ansatz.\n",
     "The algorithm consists of a classical and quantum part.\n",
     "\n",
-    "On a quantum computer a circuit is constructed which is parameterized by $\\gamma$ and $\\beta$.\n",
+    "On a quantum computer a circuit is constructed which is parameterized by $\\vec \\gamma$ and $\\vec \\beta$.\n",
     "Initially the uniform superposition state $H^{\\otimes n}$ is prepared.\n",
     "\n",
-    "Two operators $U(C,\\gamma)$ and $U(B,\\beta)$ are constructed.\n",
-    "The phase-separating operator $U(C,\\gamma)$ encodes $C$  and applies a phase shift $e^{-i\\gamma}$ on every computational basis state for every clause that is fulfilled.\n",
-    "The mixing operator $U(B, \\beta)$ changes the amplitude of solutions using rotation $R_x$.\n",
+    "Two operators $U_C$ and $U_M$ are constructed and parametrised with the parameters $\\vec \\gamma$ and $\\vec \\beta$ respectively.\n",
+    "The phase-separating operator $U_C$ encodes $C$  and applies a phase shift $e^{-i \\vec \\gamma}$ on every computational basis state for every clause that is fulfilled.\n",
+    "The mixing operator $U_M$ changes the amplitude of solutions using rotation $R_x$.\n",
     "\n",
-    "Both $U(C,\\gamma)$  and $U(B,\\beta)$ are then applied $p$ times according to the hyper-parameter $p \\in \\mathbf{N}$.\n",
+    "Both $U_C$  and $U_M$ are then applied $p$ times according to the hyper-parameter $p \\in \\mathbf{N}$.\n",
     "Finally measurements gates are added.\n",
     "\n",
     "The circuit has a shallow circuit depth of at most $mp+m$.\n",
     "\n",
-    "On a classical computer the cost of $C(z)$ for the current evaluation is evaluated.\n",
-    "Either the process is terminated if the termination condition is met ($C(z)$ is sufficiently low), or the parameters $\\gamma$ and $\\beta$ are optimized classically.\n",
+    "On a classical computer the cost of $C(\\vec z)$ for the current evaluation is evaluated.\n",
+    "Either the process is terminated if the termination condition is met ($C(\\vec z)$ is sufficiently low), or the parameters $\\vec \\gamma$ and $\\vec \\beta$ are optimized classically.\n",
     "\n",
     "$-2\\pi\\lt\\gamma\\lt2\\pi$ and $-\\pi\\lt\\beta\\lt\\pi$\n"
    ]
@@ -130,7 +130,7 @@
    "metadata": {},
    "source": [
     "### Mixing operator\n",
-    "The mixing operator $U(B, \\beta)$ applies a rotation around $X$ of $2*\\beta$ on every qubit using $R_x$ gates."
+    "The mixing operator $U_M$ applies a rotation around $X$ of $2*\\beta$ on every qubit using $R_x$ gates."
    ]
   },
   {
@@ -164,8 +164,8 @@
    "metadata": {},
    "source": [
     "### Phase-separating operator\n",
-    "The phase-separating operator $U(C,\\gamma)$ encodes $C$ and can be derived from a cost Hamiltonian $H_{Ctot}$ in Ising-form. \n",
-    "We can describe $H_{Ctot}$ in a form where for $m$ clauses operating on one or two qubits (because the domain is unconstrained) the values of $C$ are encoded.\n",
+    "The phase-separating operator $U_C$ encodes $C$ and can be derived from a cost Hamiltonian $H_C$ in Ising-form. \n",
+    "We can describe $H_C$ in a form where for $m$ clauses operating on one or two qubits (because the domain is unconstrained) the values of $C$ are encoded.\n",
     "We later describe how such a Hamiltonian can be constructed for our concrete problem class."
    ]
   },
@@ -318,16 +318,16 @@
     "Using these penalties we can transform our example into a QUBO model.\n",
     "\n",
     "$$\n",
-    "min~y(x) = 2-x_1-x_2-x_3-x_4+x_5+x_1*x_2+2*x_3*x_4-x_5*x_6\n",
+    "y(\\vec x) = 2-x_1-x_2-x_3-x_4+x_5+x_1*x_2+2*x_3*x_4-x_5*x_6\n",
     "$$\n",
     "\n",
-    "$y(x)$ is the integer of unsatisfied clauses. In other words, $y=0$ indicates that all clauses are satisfied, which is desired for this problem.\n",
+    "$y(\\vec x)$ is the integer of unsatisfied clauses. In other words, $y=0$ indicates that all clauses are satisfied, which is desired for this problem.\n",
     "\n",
     "### Creating a cost function for feature costs\n",
     "\n",
-    "For the feature costs, we can formulate a sum that adds a features cost if it is in the input vector x.\n",
+    "For the feature costs, we can formulate a sum that adds a features cost if it is in the input vector $\\vec x$.\n",
     "$$\n",
-    "k(x) = \\sum_{x}^{} c_i x_i\n",
+    "k(\\vec x) = \\sum_{x}^{} c_i x_i\n",
     "$$\n",
     "\n",
     "\n",
@@ -335,75 +335,74 @@
     "In our example, we want to find a valid configuration with the minimum cost, so we sum the two previous functions and add a penalty factor $\\alpha$ to be able to change the influence of our SAT constraints.\n",
     "\n",
     "$$\n",
-    "min~f(x) = k(x) + \\alpha y(x)\n",
+    "f(\\vec x) = k(\\vec x) + \\alpha y(\\vec x)\n",
     "$$\n",
     "\n",
-    "We assume $\\alpha \\gg 0$, the exact value probably depends on the value of $k(x)$.\n",
+    "We assume $\\alpha \\gg 0$, the exact value probably depends on the value of $k(\\vec x)$.\n",
     "\n",
     "### Forming Hamiltonians\n",
-    "We got our QUBO cost function defined. We now need to transform the Binary input space $x_i \\in \\{0,1\\}$ to the Ising Spin model of $s_i \\in \\{-1, 1\\}$. \n",
+    "We got our QUBO cost function defined. We now need to transform the Binary input space $x_i \\in \\{0,1\\}$ to the Ising Spin model of $z_i \\in \\{-1, 1\\}$. \n",
     "\n",
-    "Replace $x_i$ with $S_i = 2x_i-1$ meaning $x_i = \\frac{1 - S_i}{2}$ (Note that switching the sign changes the eigenvectors)\n",
+    "Replace $x_i$ with $z_i = 2x_i-1$ meaning $x_i = \\frac{1 - z_i}{2}$ (Note that switching the sign changes the eigenvectors)\n",
     "\n",
     "#### Cost Hamiltonian for the SAT part\n",
-    "Before applying it to the entire function, let's first consider only $min~y(x)$.\n",
+    "Before applying it to the entire function, let's first consider only $y(\\vec x)$.\n",
     "\n",
     "Ising Form:\n",
     "$$\n",
-    "min~y(s) = 2-\\frac{1-s_1}{2}-\\frac{1-s_2}{2}-\\frac{1-s_3}{2}-\\frac{1-s_4}{2}+\\frac{1-s_5}{2}+\\frac{1-s_1}{2}*\\frac{1-s_2}{2}+2*\\frac{1-s_3}{2}*\\frac{1-s_4}{2}-\\frac{1-s_5}{2}*\\frac{1-s_6}{2}\n",
+    "y(\\vec z) = 2-\\frac{1-z_1}{2}-\\frac{1-z_2}{2}-\\frac{1-z_3}{2}-\\frac{1-z_4}{2}+\\frac{1-z_5}{2}+\\frac{1-z_1}{2}*\\frac{1-z_2}{2}+2*\\frac{1-z_3}{2}*\\frac{1-z_4}{2}-\\frac{1-z_5}{2}*\\frac{1-z_6}{2}\n",
     "$$\n",
     "Simplified to (not really needed):\n",
     "$$ \n",
-    "min~y(s) = (4 + s_2 + s_1 (1 + s_2) + 2 s_3 s_4 + s_6 - s_5 (1 + s_6))*\\frac{1}{4}\n",
+    "y(\\vec z) = (4 + z_2 + z_1 (1 + z_2) + 2 z_3 z_4 + z_6 - z_5 (1 + z_6))*\\frac{1}{4}\n",
     "$$\n",
     "Which expands to:\n",
     "$$\n",
-    "min~y(s) = 1 + s_1\\frac{1}{4} + s_2\\frac{1}{4} + s_1 s_2\\frac{1}{4} + s_3 s_4 \\frac{1}{2} - s_5\\frac{1}{4} + s_6\\frac{1}{4} - s_5 s_6 \\frac{1}{4}\n",
+    "y(\\vec z) = 1 + z_1\\frac{1}{4} + z_2\\frac{1}{4} + z_1 z_2\\frac{1}{4} + z_3 z_4 \\frac{1}{2} - z_5\\frac{1}{4} + z_6\\frac{1}{4} - z_5 z_6 \\frac{1}{4}\n",
     "$$\n",
-    "And leaves us with a cost hamiltonian $H_C$ with Pauli-Z-Gates $\\sigma^z_i$ and an Identity $I$ on the global phase(?):\n",
+    "And leaves us with a cost hamiltonian $H_v$ with Pauli-Z-Gates $\\sigma^z_i$ and an Identity $I$ on the global phase(?):\n",
     "$$\n",
-    "H_C = 1*I + \\sigma^z_1\\frac{1}{4} + \\sigma^z_2\\frac{1}{4} + \\sigma^z_1 \\sigma^z_2\\frac{1}{4} + \\sigma^z_3 \\sigma^z_4 \\frac{1}{2} - \\sigma^z_5\\frac{1}{4} + \\sigma^z_6\\frac{1}{4} - \\sigma^z_5 \\sigma^z_6 \\frac{1}{4}\n",
+    "H_v = 1*I + \\sigma^z_1\\frac{1}{4} + \\sigma^z_2\\frac{1}{4} + \\sigma^z_1 \\sigma^z_2\\frac{1}{4} + \\sigma^z_3 \\sigma^z_4 \\frac{1}{2} - \\sigma^z_5\\frac{1}{4} + \\sigma^z_6\\frac{1}{4} - \\sigma^z_5 \\sigma^z_6 \\frac{1}{4}\n",
     "$$\n",
     "\n",
     "#### Cost Hamiltonian for the feature costs\n",
     "We can expand the feature costs in our example according to the table above.\n",
     "$$\n",
-    "min~k(x) = \\sum_{x}^{} c_i x_i \\\\\n",
-    "= 30*x_1 + 20*x_2 + 25*x_3 + 50*x_4 + 30*x_5 + 10*x_6\n",
+    "k(\\vec x) = \\sum_{x}^{} c_i x_i = 30*x_1 + 20*x_2 + 25*x_3 + 50*x_4 + 10*x_5 + 10*x_6\n",
     "$$\n",
     "Which we then again transform into Ising form.\n",
     "\n",
     "$$\n",
-    "min~k(s) = 15*(1-s_1) + 10*(1-s_2)+ 12.5*(1-s_3) + 25*(1-s_4) + 15*(1-s_5) + 5*(1-s_6) \\\\\n",
-    "min~k(s) = 82.5 - 15 s_1 - 10 s_2 - 12.5 s_3 - 25 s_4 - 15 s_5 - 5 s_6\n",
+    "k(\\vec z) = 15*(1-z_1) + 10*(1-z_2)+ 12.5*(1-z_3) + 25*(1-z_4) + 5*(1-z_5) + 5*(1-z_6) \\\\\n",
+    "k(\\vec z) = 72.5 - 15 z_1 - 10 z_2 - 12.5 z_3 - 25 z_4 - 5 z_5 - 5 z_6\n",
     "$$\n",
     "\n",
-    "Which leaves us with our cost Hamiltonian $H_{Ck}$\n",
+    "Which leaves us with our cost Hamiltonian $H_{\\mathit{fc}}$\n",
     "$$\n",
-    "H_{Ck} = 82.5 I - 15 \\sigma^z_1 - 10 \\sigma^z_2 - 12.5 \\sigma^z_3 - 25 \\sigma^z_4 - 15 \\sigma^z_5 - 5 \\sigma^z_6\n",
+    "H_{\\mathit{fc}} = 72.5*I - 15 \\sigma^z_1 - 10 \\sigma^z_2 - 12.5 \\sigma^z_3 - 25 \\sigma^z_4 - 5 \\sigma^z_5 - 5 \\sigma^z_6\n",
     "$$\n",
     "\n",
     "#### Combining Hamiltonians\n",
     "\n",
     "All that's left to do is choosing a suitable $\\alpha$ and combining the functions.\n",
     "\n",
-    "We choose $\\alpha = 1000$ as a first guess ($82.5 * 10$ rounded up).\n",
+    "We choose $\\alpha = 200$.\n",
     "\n",
     "$$\n",
-    "H_{Ctot} = H_{Ck} + \\alpha ~ H_C\n",
+    "H_{C} = H_{\\mathit{fc}} + \\alpha ~ H_v\n",
     "$$\n",
     "\n",
     "$$\n",
-    "H_{Ctot} = 82.5 I - 15 \\sigma^z_1 - 10 \\sigma^z_2 - 12.5 \\sigma^z_3 - 25 \\sigma^z_4 - 15 \\sigma^z_5 - 5 \\sigma^z_6  + 1000*I + \\sigma^z_1 250 + \\sigma^z_2 250 + \\sigma^z_1 \\sigma^z_2 250 + \\sigma^z_3 \\sigma^z_4 500 - \\sigma^z_5 250 + \\sigma^z_6 250 - \\sigma^z_5 \\sigma^z_6 250\n",
+    "H_{C} = 72.5*I - 15 \\sigma^z_1 - 10 \\sigma^z_2 - 12.5 \\sigma^z_3 - 25 \\sigma^z_4 - 15 \\sigma^z_5 - 5 \\sigma^z_6  + 200*I + 50 \\sigma^z_1 + 50 \\sigma^z_2 + 50 \\sigma^z_1 \\sigma^z_2 + 100 \\sigma^z_3 \\sigma^z_4 - 50 \\sigma^z_5 + 50 \\sigma^z_6 - 50 \\sigma^z_5 \\sigma^z_6\n",
     "$$\n",
     "\n",
     "simplified to\n",
     "\n",
     "$$\n",
-    "H_{Ctot} = 1082.5 I + 250 \\sigma^z_1 \\sigma^z_2 + 235 \\sigma^z_1 + 240 \\sigma^z_2 + 500 \\sigma^z_3 \\sigma^z_4 - 12.5 \\sigma^z_3 - 25 \\sigma^z_4 - 250 \\sigma^z_5 \\sigma^z_6 - 265 \\sigma^z_5 + 245 \\sigma^z_6\n",
+    "H_{C} = 272.5*I + 35 \\sigma^z_1 + 40 \\sigma^z_2 - 12.5 \\sigma^z_3 -25 \\sigma^z_4 - 55 \\sigma^z_5 + 45 \\sigma^z_6 + 50 \\sigma^z_1 \\sigma^z_2 + 100 \\sigma^z_3 \\sigma^z_4 - 50 \\sigma^z_5 \\sigma^z_6\n",
     "$$\n",
     "\n",
-    "We can implement such a Hamiltonian $H_{Ctot}$ using the `qubovert` library and solve small instances via bruteforce."
+    "We can implement such a Hamiltonian $H_{C}$ using the `qubovert` library and solve small instances via bruteforce."
    ]
   },
   {
@@ -429,7 +428,7 @@
     "z1, z2, z3, z4, z5, z6 = spin_var('z1'), spin_var('z2'), spin_var('z3'), spin_var('z4'), spin_var('z5'), spin_var('z6')\n",
     "\n",
     "# Our manually calculated hamiltonian\n",
-    "feetcost_model = 1082.5 + 250 * z1 * z2 + 235 * z1 + 240 * z2 + 500 * z3 * z4 - 12.5 * z3 - 25 * z4 - 250 * z5 * z6 - 265 * z5 + 245 * z6\n",
+    "feetcost_model = 272.5 + 35 * z1 + 40 * z2 - 12.5 * z3 - 25 * z4 - 55 * z5 + 45 * z6 + 50 * z1 * z2 + 100 * z3 * z4 - 50 * z5 * z6\n",
     "solve_bruteforce(feetcost_model)"
    ]
   },
@@ -438,7 +437,7 @@
    "id": "a1aae270",
    "metadata": {},
    "source": [
-    "We can also define the SAT ($H_C$) and cost ($H_{Ck}$) Hamiltonians separately and combine them afterwards."
+    "We can also define the SAT ($H_v$) and cost ($H_{\\mathit{fc}}$) Hamiltonians separately and combine them afterwards."
    ]
   },
   {
@@ -500,7 +499,7 @@
    "metadata": {},
    "source": [
     "As the circuit is executed multiple times the function `compute_hamiltonian_energy` can be used with different strategies.\n",
-    "Currently, we provide average, top and minimum strategies and the best one to use is TBD."
+    "Currently, we provide average, top and minimum strategies and the best one to use is `'avg'`."
    ]
   },
   {
