--- a/configproblem/qaoa/qaoa_instance_evaluation.ipynb
+++ b/configproblem/qaoa/qaoa_instance_evaluation.ipynb
@@ -17,6 +17,7 @@
     "from configproblem.util.problem_instance import ProblemInstance, generate_problem_instance_set\n",
     "from pprint import pprint\n",
     "import numpy as np\n",
+    "from pathlib import Path\n",
     "from qubovert import boolean_var"
    ]
   },
@@ -149,7 +150,11 @@
     "                                          [(x1, False), (x4, False), (x5, True)]],\n",
     "                                         [x1, x2, x3, x4, x5, x6],\n",
     "                                         [10, 10, 10, 10, 10, 10],\n",
-    "                                         alpha_sat=1000)]"
+    "                                         alpha_sat=1000)]\n",
+    "    \n",
+    "if save_results:\n",
+    "    # create results folder if it doesn't exist\n",
+    "    Path(\"results\").mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
