--- a/configproblem/qaoa/qaoa_instance_evaluation.ipynb
+++ b/configproblem/qaoa/qaoa_instance_evaluation.ipynb
@@ -17,6 +17,7 @@
     "from configproblem.util.problem_instance import ProblemInstance, generate_problem_instance_set\n",
     "from pprint import pprint\n",
     "import numpy as np\n",
+    "from pathlib import Path\n",
     "from qubovert import boolean_var"
    ]
   },
@@ -29,7 +30,7 @@
    "outputs": [],
    "source": [
     "# instance generation config\n",
-    "use_predefined_instances = False\n",
+    "use_predefined_instances = True\n",
     "\n",
     "num_instances = 20\n",
     "num_features = 6\n",
@@ -55,9 +56,11 @@
     "\n",
     "# run config\n",
     "run_print_hamiltonians = False\n",
-    "run_cost_landscape = False\n",
-    "run_puso_qaoa = True\n",
-    "run_quso_qaoa = True\n",
+    "run_cost_landscape = True\n",
+    "run_puso_qaoa = False\n",
+    "run_quso_qaoa = False\n",
+    "\n",
+    "save_results = False\n",
     "\n",
     "\n",
     "# cost landscape config\n",
@@ -86,7 +89,7 @@
     "else:\n",
     "    # define binary vars needed for problem instances\n",
     "    x1, x2, x3, x4, x5, x6, x7, x8, x9, x10 = boolean_var('x1'), boolean_var('x2'), boolean_var('x3'), boolean_var('x4'), boolean_var('x5'), boolean_var('x6'), boolean_var('x7'), boolean_var('x8'), boolean_var('x9'), boolean_var('x10')\n",
-    "\n",
+    "    \n",
     "    # define set of problem instances to evaluate\n",
     "    problem_instances = [ProblemInstance([[(x1, True), (x2, True)],\n",
     "                                          [(x2, True), (x3, False), (x4, True)],\n",
@@ -147,7 +150,11 @@
     "                                          [(x1, False), (x4, False), (x5, True)]],\n",
     "                                         [x1, x2, x3, x4, x5, x6],\n",
     "                                         [10, 10, 10, 10, 10, 10],\n",
-    "                                         alpha_sat=1000)]"
+    "                                         alpha_sat=1000)]\n",
+    "    \n",
+    "if save_results:\n",
+    "    # create results folder if it doesn't exist\n",
+    "    Path(\"results\").mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
@@ -176,6 +183,8 @@
     "# plot cost landscape\n",
     "if run_cost_landscape:\n",
     "    for index, instance in enumerate(problem_instances):\n",
+    "        file_path_beta_gamma = \"results\\\\instance_\" + str(index) + \"_beta_gamma_cost_landscape\" + \".png\" if save_results else None\n",
+    "        file_path_f_mu = \"results\\\\instance_\" + str(index) + \"_f_mu_cost_landscape\" + \".png\" if save_results else None\n",
     "        print(f\"Instance {index}:\")\n",
     "        if len(instance.get_cost_hamiltonian()) == 0:\n",
     "            print(\"Cost hamiltonian is zero, skipping plot for cost and combined hamiltonian\")\n",
@@ -185,8 +194,8 @@
     "                            {'hamiltonian': instance.get_cost_hamiltonian(), 'name': 'COST'},\n",
     "                            {'hamiltonian': instance.get_puso_combined_hamiltonian(), 'name': 'COMBINED'}]\n",
     "        strategies = ['min', 'avg', 'top']\n",
-    "        plot_beta_gamma_cost_landscape(quso_problem_circuit, hamiltonians, strategies, instance.get_num_features(), beta_gamma_step_size)\n",
-    "        plot_f_mu_cost_landscape(get_normalized_hamiltonian(instance.get_puso_combined_hamiltonian()), instance.get_num_features())"
+    "        plot_beta_gamma_cost_landscape(quso_problem_circuit, hamiltonians, strategies, instance.get_num_features(), beta_gamma_step_size, file_path=file_path_beta_gamma)\n",
+    "        plot_f_mu_cost_landscape(get_normalized_hamiltonian(instance.get_puso_combined_hamiltonian()), instance.get_num_features(), file_path=file_path_f_mu)"
    ]
   },
   {
@@ -198,9 +207,10 @@
    "outputs": [],
    "source": [
     "# plot PUBO results\n",
-    "result_quality_list = []\n",
+    "validity_quality_list = []\n",
     "if run_puso_qaoa:\n",
     "    for index, instance in enumerate(problem_instances):\n",
+    "        file_path_pubo = \"results\\\\instance_\" + str(index) + \"_pubo_histogram\" + \".png\" if save_results else None\n",
     "        print(f\"Instance {index}:\")\n",
     "        hamiltonian = instance.get_puso_combined_hamiltonian()\n",
     "\n",
@@ -211,12 +221,12 @@
     "\n",
     "        probabilities_dict = instance.convert_solution_dict(probabilities_dict, 'puso_combined')\n",
     "\n",
-    "        result_quality_list.append(instance.get_result_quality(probabilities_dict))\n",
+    "        validity_quality_list.append(instance.get_validity_quality(probabilities_dict))\n",
     "\n",
     "        for key in probabilities_dict:\n",
     "            probabilities_dict[key] = round(probabilities_dict[key], 4)\n",
     "\n",
-    "        plot_counts_histogram(probabilities_dict, get_hamiltonian_dimension(hamiltonian), instance.get_best_config(), instance.get_valid_configs())"
+    "        plot_counts_histogram(probabilities_dict, get_hamiltonian_dimension(hamiltonian), instance.get_best_config(), instance.get_valid_configs(), file_path=file_path_pubo)"
    ]
   },
   {
@@ -225,17 +235,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# rank instances by result_quality = success_probability * 2^num_features / num_valid_configs\n",
+    "# rank instances by validity_quality = success_probability * 2^num_features / num_valid_configs\n",
     "if run_puso_qaoa:\n",
-    "    # sort instances by result_quality\n",
-    "    sorted_indices = np.argsort(result_quality_list)\n",
+    "    # sort instances by validity_quality\n",
+    "    sorted_indices = np.argsort(validity_quality_list)\n",
     "    sorted_indices = sorted_indices[::-1]\n",
     "    sorted_problem_instances = [problem_instances[i] for i in sorted_indices]\n",
-    "    success_probabilities_per_valid_config_list = [result_quality_list[i] for i in sorted_indices]\n",
+    "    success_probabilities_per_valid_config_list = [validity_quality_list[i] for i in sorted_indices]\n",
     "    for index, instance in enumerate(sorted_problem_instances):\n",
     "        print(f\"Instance {sorted_indices[index]}:\")\n",
     "        print(str(instance))\n",
-    "        print(f\"Result quality: {result_quality_list[sorted_indices[index]]}\\n\")"
+    "        print(f\"Result quality: {validity_quality_list[sorted_indices[index]]}\\n\")"
    ]
   },
   {
@@ -247,9 +257,10 @@
    "outputs": [],
    "source": [
     "# plot quadratized QUBO results\n",
-    "result_quality_list = []\n",
+    "validity_quality_list = []\n",
     "if run_quso_qaoa:\n",
     "    for index, instance in enumerate(problem_instances):\n",
+    "        file_path_qubo = \"results\\\\instance_\" + str(index) + \"_qubo_histogram\" + \".png\" if save_results else None\n",
     "        print(f\"Instance {index}:\")\n",
     "        hamiltonian = instance.get_quso_combined_hamiltonian()\n",
     "\n",
@@ -262,12 +273,12 @@
     "\n",
     "        probabilities_dict = instance.convert_solution_dict(probabilities_dict, 'quso_combined')\n",
     "\n",
-    "        result_quality_list.append(instance.get_result_quality(probabilities_dict))\n",
+    "        validity_quality_list.append(instance.get_validity_quality(probabilities_dict))\n",
     "\n",
     "        for key in probabilities_dict:\n",
     "            probabilities_dict[key] = round(probabilities_dict[key], 4)\n",
     "\n",
-    "        plot_counts_histogram(probabilities_dict, instance.get_num_features(), instance.get_best_config(), instance.get_valid_configs())"
+    "        plot_counts_histogram(probabilities_dict, instance.get_num_features(), instance.get_best_config(), instance.get_valid_configs(), file_path=file_path_qubo)"
    ]
   },
   {
@@ -276,17 +287,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# rank instances by result_quality = success_probability * 2^num_features / num_valid_configs\n",
+    "# rank instances by validity_quality = success_probability * 2^num_features / num_valid_configs\n",
     "if run_quso_qaoa:\n",
-    "    # sort instances by result_quality\n",
-    "    sorted_indices = np.argsort(result_quality_list)\n",
+    "    # sort instances by validity_quality\n",
+    "    sorted_indices = np.argsort(validity_quality_list)\n",
     "    sorted_indices = sorted_indices[::-1]\n",
     "    sorted_problem_instances = [problem_instances[i] for i in sorted_indices]\n",
-    "    success_probabilities_per_valid_config_list = [result_quality_list[i] for i in sorted_indices]\n",
+    "    success_probabilities_per_valid_config_list = [validity_quality_list[i] for i in sorted_indices]\n",
     "    for index, instance in enumerate(sorted_problem_instances):\n",
     "        print(f\"Instance {sorted_indices[index]}:\")\n",
     "        print(str(instance))\n",
-    "        print(f\"Result quality: {result_quality_list[sorted_indices[index]]}\\n\")"
+    "        print(f\"Result quality: {validity_quality_list[sorted_indices[index]]}\\n\")"
    ]
   }
  ],
