Extract mixer circuit into qaoa_mixer.py

--- a/configproblem/qaoa/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_sat.ipynb
@@ -141,8 +141,8 @@
    "outputs": [],
    "source": [
     "# Mixer Hamiltonian\n",
-    "from qaoa_application import mixer_circuit\n",
-    "%psource mixer_circuit"
+    "import configproblem.qaoa.qaoa_mixer as mixer\n",
+    "%psource mixer.standard_mixer"
    ]
   },
   {
@@ -154,7 +154,7 @@
    "source": [
     "from qiskit.circuit import Parameter\n",
     "\n",
-    "example_qc_mixer = mixer_circuit(2, Parameter(\"$\\\\beta$\"))\n",
+    "example_qc_mixer = mixer.standard_mixer(2, Parameter(\"$\\\\beta$\"))\n",
     "example_qc_mixer.draw(output=\"mpl\")"
    ]
   },
@@ -251,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example_qaoa_circuit, _, _ = qaoa_circuit(problem_circuit, sat_hamiltonian, 6, 1)\n",
+    "example_qaoa_circuit, _, _ = qaoa_circuit(problem_circuit, mixer.standard_mixer, sat_hamiltonian, 6, 1)\n",
     "example_qaoa_circuit.draw(output=\"mpl\")"
    ]
   },
@@ -283,7 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "counts, qc = quantum(problem_circuit, sat_hamiltonian, 6, 1, [1], [1])\n",
+    "counts, qc = quantum(problem_circuit, mixer.standard_mixer, sat_hamiltonian, 6, 1, [1], [1])\n",
     "qc.draw(output=\"mpl\")"
    ]
   },
@@ -550,7 +550,7 @@
     "                {'hamiltonian': cost_model.to_quso(), 'name': 'COST'},\n",
     "                {'hamiltonian': combined_hamiltonian, 'name': 'COMBINED'}]\n",
     "strategies = ['min', 'avg', 'top']\n",
-    "plot_beta_gamma_cost_landscape(problem_circuit, hamiltonians, strategies, 6, 0.2)\n",
+    "plot_beta_gamma_cost_landscape(problem_circuit, mixer.standard_mixer, hamiltonians, strategies, 6, 0.2)\n",
     "\n",
     "# Plot cost landscape for different f and mu\n",
     "plot_f_mu_cost_landscape(combined_hamiltonian, 6)"
@@ -603,7 +603,8 @@
     "       0.26267851, 0.        , 0.232379  , 0.20248457, 0.20736441,\n",
     "       0.04472136, 0.        , 0.        , 0.        ]\n",
     "\n",
-    "layers = 40 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
+    "mixer_circuit = mixer.standard_mixer\n",
+    "layers = 5 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
     "n_features = 6\n",
     "shots = 256\n",
     "theta = {\"beta\": 0.01, \"gamma\": -0.01} # start values for optimization\n",
@@ -614,7 +615,7 @@
     "if not use_warmstart:\n",
     "    warmstart_statevector = None\n",
     "\n",
-    "counts, qc = apply_qaoa(problem_circuit, hamiltonian, layers, n_features, shots, theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer)"
+    "counts, qc = apply_qaoa(problem_circuit, mixer_circuit, hamiltonian, layers, n_features, shots, theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer)"
    ]
   },
   {
@@ -654,7 +655,7 @@
     "from qaoa_application import apply_qaoa_statevector\n",
     "import numpy as np\n",
     "\n",
-    "probabilities, _ = apply_qaoa_statevector(problem_circuit, hamiltonian, layers, n_features, theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=False)\n",
+    "probabilities, _ = apply_qaoa_statevector(problem_circuit, mixer_circuit, hamiltonian, layers, n_features, theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=False)\n",
     "probabilities_dict = {}\n",
     "for i in range(0, 2 ** n_features):\n",
     "    probabilities_dict[(np.binary_repr(i, width=6))] = round(probabilities[i], 4)\n",
